# safe-rm-rs

./: .gitignore  1.md  Cargo.toml  README.md  actions.md  safe-rm-rs_项目_GitHub_Actions_全流程构建发布操作手册.md
.github/workflows/: 1rust.yml  rust.yml
src/: main.rs
