[package]
name = "srm"
version = "1.2.1"
edition = "2021"
authors = ["Meitao Lin <mtl>"]
description = "Safe rm alternative with audit trail and short IDs"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4.43", features = ["clock"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ctrlc = "3.4"
md5 = "0.7"
bytesize = "1.3"
indicatif = "0.17"
memmap2 = "0.9"
fs2 = "0.4"
libc = "0.2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
